simple-idp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-idp
  namespace: simple-idp
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: simple-idp
  template:
    metadata:
      labels:
        app: simple-idp
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: simple-idp
          image: ghcr.io/tpaulus/simple-idp:sha-471d3e6cac7f4fbe5245b25e42ae1e58dd586bb1@sha256:2873cb6489cdabdae2a8e8d97169df05b2e8321941d480c2650876b53803d4cf
          args:
            - --config
            - /etc/simple-idp/config.yaml
            - --http-addr
            - :8080
            - --log-format
            - json
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/simple-idp
              readOnly: true
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsUser: 65532
            runAsGroup: 65532
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: config
          configMap:
            name: simple-idp-config
