simple-idp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-idp
  namespace: simple-idp
spec:
  selector:
    app: simple-idp
  ports:
    - name: http
      port: 80
      targetPort: http
