simple-idp/routing.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-forwarded-cert-headers
  namespace: simple-idp
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Tls-Client-Cert: ""
      X-Forwarded-Tls-Client-Cert-Info: ""
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pass-client-cert
  namespace: simple-idp
spec:
  passTLSClientCert:
    pem: true
    info:
      subject:
        commonName: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-client-cert
  namespace: simple-idp
spec:
  chain:
    middlewares:
      - name: strip-forwarded-cert-headers
      - name: pass-client-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-idp-authorize
  namespace: simple-idp
  annotations:
    external-dns.kubernetes.io/target: lfp.it.paulus.family
    traefik.ingress.kubernetes.io/router.middlewares: simple-idp-forward-client-cert@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: simple-idp-require-client-cert@kubernetescrd
spec:
  tls:
    - hosts:
        - sso.paulus.family
      secretName: sso-paulus-family-auth-cert
  rules:
    - host: sso.paulus.family
      http:
        paths:
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /authorize
            pathType: Exact
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-idp
  namespace: simple-idp
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: simple-idp-strip-forwarded-cert-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - sign-on-config.paulus.family
      secretName: sign-on-config-paulus-family-cert
  rules:
    - host: sign-on-config.paulus.family
      http:
        paths:
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /.well-known/openid-configuration
            pathType: Exact
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /jwks.json
            pathType: Exact
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /token
            pathType: Exact
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /userinfo
            pathType: Exact
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /logout
            pathType: Exact
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /oidc/v1/end_session
            pathType: Exact
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /healthz
            pathType: Exact
          - backend:
              service:
                name: simple-idp
                port:
                  number: 80
            path: /readyz
            pathType: Exact
