simple-idp/debug.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-idp-debug
  namespace: simple-idp
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: simple-idp-debug
  template:
    metadata:
      labels:
        app: simple-idp-debug
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: whoami
          image: traefik/whoami:v1.11.0
          args:
            - --port=8080
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsUser: 65532
            runAsGroup: 65532
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: simple-idp-debug
  namespace: simple-idp
spec:
  selector:
    app: simple-idp-debug
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: simple-idp-debug
  namespace: simple-idp
spec:
  podSelector:
    matchLabels:
      app: simple-idp-debug
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 8080
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-idp-debug
  namespace: simple-idp
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: simple-idp-forward-client-cert@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: simple-idp-require-client-cert@kubernetescrd
spec:
  tls:
    - hosts:
        - sso.paulus.family
      secretName: sso-paulus-family-auth-cert
  rules:
    - host: sso.paulus.family
      http:
        paths:
          - backend:
              service:
                name: simple-idp-debug
                port:
                  number: 80
            path: /debug-cert
            pathType: Exact
